Fix missalignment

--- a/themes/jeo-theme/assets/scss/5-pages/_p-search.scss
+++ b/themes/jeo-theme/assets/scss/5-pages/_p-search.scss
@@ -139,6 +139,7 @@
                     line-height: 20px;
                     margin-left: 5px;
                     position: relative;
+                    top: 1px;
                 }
             }
 
